# private-houses-backend

./: .env  .gitignore  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2c905aff10a0_add_direction.py  30cab1f22ade_correct_change_relashinship.py  5ae76b48651c_correct_change_relashinship_2.py  76eee8be7957_add_study_form.py  77e5227d8c4d_correct_change_relashinship_3.py  b70fb25d929b_add_exam_form.py  d4d8d9bf16f2_add_user_exam.py  d6879874a66c_correct_change_relashinship_4.py  da78aeaaf65d_delete_exam_form.py  f1e4ee2242a5_add_study_lenguage.py  f9397fee652a_correct_relashinship.py
migrations/: env.py
migrations/versions/: 343036397f9a_initial_schema.py
src/api/: __init__.py  admin_user.py  application.py  audit_log.py  auth.py  education_type.py  employee.py  exam_form.py  house.py  passport_data.py  resident.py  role.py  sms.py  study_direction.py  study_form.py  study_info.py  study_language.py  study_type.py  territory.py  verification.py
src/core/: config.py  db.py
src/db/: __init__.py  session.py
src/models/: __init__.py  admin_user.py  application.py  audit_log.py  employee.py  exam_form.py  house.py  passport_data.py  resident.py  study_direction.py  study_form.py  study_info.py  study_lenguage.py  territory.py  user.py  verification_code.py
src/schemas/: __init__.py  admin_user.py  application.py  audit_log.py  auth.py  education_type.py  employee.py  exam_form.py  house.py  passport_data.py  resident.py  role.py  sms.py  study_direction.py  study_form.py  study_info.py  study_language.py  (+4 more)
(+29 files in other folders)
